@@ -45,7 +45,8 @@
 				<configuration>
 					<source>19</source>
 					<target>19</target>
-				</configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
